RESOLVED FIXED257749
Fix imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html
https://bugs.webkit.org/show_bug.cgi?id=257749
Summary Fix imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOr...
youenn fablet
Reported 2023-06-06 07:59:17 PDT
Fix imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-06 07:59:33 PDT
youenn fablet
Comment 2 2023-06-06 08:07:00 PDT
youenn fablet
Comment 3 2023-06-12 05:35:19 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/40499
EWS
Comment 4 2023-06-13 23:43:56 PDT
Committed 265142@main (e428405c2a7e): <https://commits.webkit.org/265142@main> Reviewed commits have been landed. Closing PR #14698 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.