Fix imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html https://bugs.webkit.org/show_bug.cgi?id=257749 rdar://110322419

Reviewed by Eric Carlson.

Update imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html to work around specificities related to not rendered SVG images.
The specificities are that the load event is not fired when the SVG image is detached from the DOM and that there is no CachedImage if it is not visible.
We should investigate both specificities independently.
Update SVGImageElement::renderingTaintsOrigin to take into account CORS and add a CORS check in the SVG Image to VideoFrame code path.
We move the data URL check after the imge renderingTaintsOrigin check as we should first check whether its content is not tainting and then if its origin would taint or not.

* LayoutTests/imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoFrame.cpp:
(WebCore::checkImageUsability):
* Source/WebCore/html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::originClean const):
* Source/WebCore/svg/SVGImageElement.cpp:
(WebCore::SVGImageElement::renderingTaintsOrigin const):

Canonical link: https://commits.webkit.org/265142@main